src/test/fun-test/semantic/AssignmentStrictConversion2.java.err
Semantic error: type mismatch - expected SHORT, got LONG, line 5, pos 15
