src/test/fun-test/semantic/AssignmentStrictConversion2.java
class Main {
    void main() {
        long foo;
        short bar;
        bar = foo;
    }
}